--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
             <div class="text-input" tabindex="1" role="textbox" contenteditable="true" aria-multiline="true" aria-placeholder="" autofocus></div>
             <div class="placeholder">Ваше сообщение</div>
         </div>
-        <!-- --- -->
         <div class="svg_conteiner">
             <div class="svg_img"></div>
-            <div class="emoji"></div>
+            <div class="emoji emoji_active">
+                <div class="emoji_wrapSmile"></div>
+                <div class="emoji_recent wrap_hiden">
+                    <div class="recent_smile-conteiner"></div>
+                </div>
+                <div class="emogi_panel">
+                    <div class="svg_conteiner_icon">
+                        <div class="smile_icon icon_active"></div>
+                        <div class="clock_icon"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <!-- --- -->
+    <!-- --- -->
+    <!-- --- -->
+    <script type="module" src="/script.js"></script>
+    <script type="module" src="/json.js"></script>
 </body>
 </html>
