fixed some bugs

--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="conteiner">
+    <div class="container">
         <div class="textbox">
             <div class="text-input" tabindex="1" role="textbox" contenteditable="true" aria-multiline="true" aria-placeholder="" autofocus></div>
             <div class="placeholder">Ваше сообщение</div>
         </div>
-        <div class="svg_conteiner">
+        <div class="svg_container">
             <div class="svg_img"></div>
-            <div class="emoji emoji_active">
+            <div class="emoji">
                 <div class="emoji_wrapSmile"></div>
                 <div class="emoji_recent wrap_hiden">
-                    <div class="recent_smile-conteiner"></div>
+                    <div class="recent_smile-container"></div>
                 </div>
                 <div class="emogi_panel">
-                    <div class="svg_conteiner_icon">
+                    <div class="svg_container_icon">
                         <div class="smile_icon icon_active"></div>
                         <div class="clock_icon"></div>
                     </div>
