--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="textbox">
-            <div class="text-input" tabindex="1" role="textbox" contenteditable="true" aria-multiline="true" aria-placeholder="" autofocus></div>
-            <div class="placeholder">Ваше сообщение</div>
+        <div class="container__textbox">
+            <div class="textbox__textInput" tabindex="1" role="textbox" contenteditable="true" aria-multiline="true" aria-placeholder="" autofocus></div>
+            <div class="textbox__placeholder">Ваше сообщение</div>
         </div>
-        <div class="svg_container">
+        <div class="container__svg">
             <div class="svg_img"></div>
             <div class="emoji">
-                <div class="emoji_wrapSmile"></div>
-                <div class="emoji_recent wrap_hiden">
+                <div class="emoji__wrapSmile"></div>
+                <div class="emoji__recent wrap_hiden">
                     <div class="recent_smile-container"></div>
                 </div>
-                <div class="emogi_panel">
-                    <div class="svg_container_icon">
+                <div class="emogi__panel">
+                    <div class="panel__icon">
                         <div class="smile_icon icon_active"></div>
                         <div class="clock_icon"></div>
                     </div>
